# VECCTF2022

./: README  README.md
crypto/bitflip/: Dockerfile  README.md  docker-compose.yml  flag.txt  main.py  solve.py
crypto/sofie-crypto1/: README.md
forensics/Pirate MFA 3 - Message in a Bottle.jpg/: Part 3 Desc.txt  README.md
forensics/Pirate MFA 4 - Davy Jones’ BitLocker/: Part 4 Desc.txt
forensics/lots_of_chests/: README.md  chest.tar.xz  create.sh  flag.txt  solve.sh
forensics/lots_of_chests_2/: README.md  create.sh  solve.sh
forensics/sofie-steg-pirate/: README.md
forensics/sofie-steg-shanty/: README.md  SeaShanty.au
misc/Geo-2/: README.md
misc/Geo-5/: README.md
misc/Geo-6/: README.md
misc/Geo-7/: README.md
misc/Geo-8/: README.md
misc/I see the player you mean/: readme.md
misc/Pirate MFA 1 - CTF (Comprehend The Flags)/: Part 1 Desc.txt  README.md
misc/Pirate MFA 2 - Morse-Core/: Part 2 Desc.txt  README.md
misc/Pirate MFA 4 - Davy Jones’ BitLocker/: README.md
misc/YarrrBot 1/: README.md  arrr.py  pyproject.toml  yarrrbot.py
misc/YarrrBot 2/: README.md
misc/patchwork/: README.md
misc/pow/: README.md  flag.txt  pow.py
osint/Geo-1/: README.md
osint/Geo-3/: README.md
osint/Geo-4/: README.md
osint/Geo-5/: README.md
osint/Geo-7/: README.md
osint/Geo-8/: README.md
pwn/Always Secure SSH/: Dockerfile  README.md  flag.txt  script.sh
pwn/arrfox/: Dockerfile  README.md  normal_config  solve_pow.py  x.js
pwn/bof/: Dockerfile  core  docker-compose.yml  not_simple_bof  x.py
pwn/combine/: Dockerfile  docker-compose.yml  flag.txt  (+2 more)
(+49 files in other folders)
