[tool.poetry]
name = "yarrrbot"
version = "0.1.0"
description = ""
authors = ["Rhys Davies <rhys@memes.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
discord-py-interactions = "^4.3.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yarrrbot = "yarrrbot:main"